--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">LEITUSXNM</div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="projects/determinant.html">Determinant Calc</a>
+            <a href="projects/determinants.html">Determinant Calc</a>
             <a href="projects/crout.html">Crout Solver</a>
         </div>
     </nav>
@@ -26,7 +26,9 @@
                 I am an Electronics Engineering student specializing in computational tools. 
                 I build Python applications for solving complex mathematical matrices like Crout's Method.
             </p>
-            <a href="projects/determinant.html" class="btn btn-primary">See My Work</a>
+            
+            <a href="projects/determinants.html" class="btn btn-primary">See My Work</a>
+            
             <a href="https://github.com/leitusxnm" class="btn btn-secondary">GitHub Profile</a>
         </div>
     </div>
