--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
         <div class="logo">LEITUSXNM</div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="projects/determinants.html">Determinant Calc</a>
-            <a href="projects/crout.html">Crout Solver</a>
+            
+            <div class="dropdown">
+                <button class="dropbtn">My Projects ▾</button>
+                <div class="dropdown-content">
+                    <a href="projects/determinants.html">Determinant Calc</a>
+                    <a href="projects/crout.html">Crout Solver</a>
+                    <a href="#">Sorting Machine</a>
+                    <a href="#">Antenna Research</a>
+                    <a href="#">Traffic Light System</a>
+                    <a href="#">DSP Filter Design</a>
+                    <a href="#">Robotics Arm</a>
+                    <a href="#">Future Project...</a>
+                </div>
+            </div>
+            
+            <a href="https://github.com/leitusxnm">GitHub</a>
         </div>
     </nav>
 
