--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <div class="content">
             <div class="subtitle">ECE Student & Developer</div>
-            <h1>Hello, Jon Lewyn Villaram Tanggaro</h1>
+            <h1>Hello, I'm Jon Lewyn Villaram Tanggaro</h1>
             <p>
                 I am an Electronics Engineering student specializing in computational tools. 
                 I build Python applications for solving complex mathematical matrices like Crout's Method.
