--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Projects ▾</button>
                 <div class="dropdown-content">
+                    <a href="projects/calc-splainer.html">Calculator Splainer</a>
                     <a href="projects/determinants.html">Determinant Calc</a>
                     <a href="projects/crout.html">Crout Solver</a>
                     
