--- a/projects/calc-splainer.html
+++ b/projects/calc-splainer.html
@@ -81,7 +81,7 @@
         <div class="logo">LEITUSXNM</div>
         <div class="nav-links">
             <a href="../index.html">Home</a>
-            <a href="https://github.com/leitusxnm" target="_blank">GitHub</a>
+            <a href="https://github.com/lewynski" target="_blank">GitHub</a>
             <a href="https://discord.com/users/879936602414133288" target="_blank">Discord</a>
             
             <div class="dropdown">
