--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav>
-        <div class="logo">LEWYN</div>
+        <div class="logo">Unfiltered</div>
         
         <div class="nav-links">
             <a href="index.html">Home</a>
