--- a/projects/calc-splainer.html
+++ b/projects/calc-splainer.html
@@ -78,7 +78,7 @@
 <body>
 
     <nav>
-        <div class="logo">LEITUSXNM</div>
+        <div class="logo">Calculator Splainer</div>
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="https://github.com/lewynski" target="_blank">GitHub</a>
