--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="me.jpg" alt="Jon Lewyn" class="profile-pic">
             </div>
             <span class="badge">ECE STUDENT & DEVELOPER</span>
-            <h1>Hello, I'm <span class="gradient-text">Jon Lewyn</span></h1>
+            <h1>Hello, I'm <span class="gradient-text">Jon Lewyn Villaram Tanggaro</span></h1>
             <p class="bio-text">
                 An Electronics Engineering student at <strong>PUP Sto. Tomas</strong> with a passion for bridging the gap between hardware and software. 
                 I specialize in building computational tools, embedded systems, and full-stack web applications.
@@ -92,7 +92,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Unfiltered Portfolio. Built by Jon Lewyn Villaram Tanggaro.</p>
+        <p>&copy; 2026 Digital Website. Built by Jon Lewyn Villaram Tanggaro.</p>
         <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/lewynski"><i class="fab fa-github"></i></a>
