--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="badge">ECE STUDENT & DEVELOPER</span>
             <h1>Hello, I'm <span class="gradient-text">Jon Lewyn Villaram Tanggaro</span></h1>
             <p class="bio-text">
-                An Electronics Engineering student at <strong>PUP Sto. Tomas</strong> with a passion for bridging the gap between hardware and software. 
+                An Electronics Engineering student at <strong>Polytechnic University of the Philippines Sto. Tomas</strong> with a passion for bridging the gap between hardware and software. 
                 I specialize in building computational tools, embedded systems, and full-stack web applications.
             </p>
             <div class="cta-buttons">
