--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="projects/determinants.html">Determinant Calc</a>
                     <a href="projects/matrix-ops.html">Matrix Operations</a>
                     <a href="projects/anime-quiz.html">Anime Quiz</a>
+                    <a href="projects/mlbb-quiz.html">MLBB Quiz</a>
                 </div>
             </div>
         </div>
