--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <a href="projects/matrix-ops.html">Matrix Operations</a>
                     <a href="projects/anime-quiz.html">Anime Quiz</a>
                     <a href="projects/mlbb-quiz.html">MLBB Quiz</a>
+                    <a href="projects/snake-game.html">Snake Game</a>
                 </div>
             </div>
         </div>
