--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <a href="projects/anime-quiz.html">Anime Quiz</a>
                     <a href="projects/mlbb-quiz.html">MLBB Quiz</a>
                     <a href="projects/snake-game.html">Snake Game</a>
+                    <a href="projects/flappy-bird.html">Neon Flap</a>
                 </div>
             </div>
         </div>
