--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <a href="projects/mlbb-quiz.html">MLBB Quiz</a>
                     <a href="projects/snake-game.html">Snake Game</a>
                     <a href="projects/flappy-bird.html">Neon Flap</a>
+                    <a href="projects/tic-tac-toe.html">Minimax AI</a>
                 </div>
             </div>
         </div>
