--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <a href="projects/snake-game.html">Snake Game</a>
                     <a href="projects/flappy-bird.html">Neon Flap</a>
                     <a href="projects/tic-tac-toe.html">Minimax AI</a>
+                    <a href="projects/2048.html">2048 Puzzle</a>
                 </div>
             </div>
         </div>
