--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <a href="projects/flappy-bird.html">Neon Flap</a>
                     <a href="projects/tic-tac-toe.html">Minimax AI</a>
                     <a href="projects/2048.html">2048 Puzzle</a>
+                    <a href="projects/rpg-game.html">RPG Engine</a>
                 </div>
             </div>
         </div>
