--- a/projects/rpg-game.html
+++ b/projects/rpg-game.html
@@ -44,7 +44,7 @@
 <body>
 
     <nav>
-        <div class="logo">Unfiltered</div>
+        <div class="logo">RPG Game</div>
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="https://github.com/lewynski" target="_blank">GitHub</a>
