--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <a href="projects/tic-tac-toe.html">Minimax AI</a>
                     <a href="projects/2048.html">2048 Puzzle</a>
                     <a href="projects/rpg-game.html">RPG Engine</a>
+                    <a href="projects/fishing-game.html">Neon Angler</a>
                 </div>
             </div>
         </div>
