--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <a href="projects/2048.html">2048 Puzzle</a>
                     <a href="projects/rpg-game.html">RPG Engine</a>
                     <a href="projects/fishing-game.html">Neon Angler</a>
+                    <a href="projects/claw-machine.html">Cyber Catch</a>
                 </div>
             </div>
         </div>
