--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 I specialize in building computational tools, embedded systems, and full-stack web applications.
             </p>
             <div class="cta-buttons">
-                <a href="#skills" class="btn-primary">View My Tech Stack</a>
+                <a href="#skills" class="btn-primary">FIELD</a>
                 <a href="https://github.com/lewynski" target="_blank" class="btn-secondary"><i class="fab fa-github"></i> GitHub Profile</a>
             </div>
         </div>
