--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <a href="projects/rpg-game.html">RPG Engine</a>
                     <a href="projects/fishing-game.html">Neon Angler</a>
                     <a href="projects/claw-machine.html">Cyber Catch</a>
+                    <a href="projects/eiji-ai.html">Eiji AI</a>
                 </div>
             </div>
         </div>
