--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -121,7 +121,8 @@
 
         try {
             // 2. Fetch from Gemini API
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+            // FIXED: Changed model to 'gemini-1.5-flash-latest' to resolve "Not Found" errors
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
@@ -136,6 +137,11 @@
             // 3. Process Response
             if(data.error) throw new Error(data.error.message);
             
+            // Safety check for empty responses
+            if (!data.candidates || data.candidates.length === 0) {
+                 throw new Error("No response from AI. Try again.");
+            }
+
             const aiReply = data.candidates[0].content.parts[0].text;
             
             addMessage(aiReply, 'ai');
