--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <i class="fab fa-github"></i> GitHub Profile
                 </a>
                 
-                <a href="Tanggaro_Resume.pdf" target="_blank" class="btn-secondary" style="border-color: #4f46e5; color: #818cf8;">
-                    <i class="fas fa-file-pdf"></i> My Resume
+                <a href="resume.html" class="btn-secondary" style="border-color: #4f46e5; color: #818cf8;">
+                    <i class="fas fa-file-alt"></i> My Resume
                 </a>
             </div>
         </div>
