--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -55,7 +55,7 @@
 
     <div id="chat-box" class="flex-1 p-4 flex flex-col gap-3">
         <div class="p-3 rounded-xl max-w-[85%] msg-ai shadow-md text-sm">
-            Systems online. I am Eiji, powered by the Gemini 1.5 Flash model. Ask me anything!
+            Systems online. I am Eiji, powered by the Gemini AI model. Ask me anything!
         </div>
     </div>
 
@@ -80,10 +80,10 @@
 
   <script>
     /* ----------------------------------------------------
-       PASTE YOUR GOOGLE GEMINI API KEY BELOW 
+       PASTE YOUR NEW GOOGLE GEMINI API KEY BELOW 
        ----------------------------------------------------
     */
-    const API_KEY = "AIzaSyDv0O4YoOfa9n5ip8pVbN0LHRTMejS6OVE"; 
+    const API_KEY = "AIzaSyDe9s0_R4BVOaIOEddkbACh_MRE01OO5Tg"; 
     /* ---------------------------------------------------- */
 
     const chatBox = document.getElementById('chat-box');
@@ -106,7 +106,7 @@
         const text = userInput.value.trim();
         if (!text) return;
         
-        if (API_KEY === "PASTE_YOUR_API_KEY_HERE") {
+        if (API_KEY === "PASTE_YOUR_NEW_API_KEY_HERE" || API_KEY.length < 10) {
             addMessage("⚠️ Error: Please insert your API Key in the code.", 'ai');
             return;
         }
@@ -121,8 +121,8 @@
 
         try {
             // 2. Fetch from Gemini API
-            // FIXED: Changed model to 'gemini-1.5-flash-latest' to resolve "Not Found" errors
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`, {
+            // FIXED: Using standard 'gemini-1.5-flash'
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
@@ -164,7 +164,11 @@
         
         // Render Markdown for AI, Plain text for User
         if(sender === 'ai') {
-            div.innerHTML = marked.parse(text);
+            try {
+                div.innerHTML = marked.parse(text);
+            } catch(e) {
+                div.innerText = text; // Fallback if marked.js fails
+            }
         } else {
             div.innerText = text;
         }
