--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -36,6 +36,7 @@
     /* Markdown Styles inside chat */
     .msg-ai p { margin-bottom: 0.5rem; }
     .msg-ai code { background: rgba(0,0,0,0.2); padding: 2px 4px; rounded; font-family: monospace; }
+    .msg-ai strong { font-weight: 700; color: #bfdbfe; }
   </style>
 </head>
 <body class="flex items-center justify-center h-screen p-4 text-white">
@@ -48,14 +49,14 @@
             <span class="text-2xl">⚡</span>
         </div>
         <div>
-            <h1 class="font-bold text-lg text-blue-400">Eiji (Gemini Powered)</h1>
+            <h1 class="font-bold text-lg text-blue-400">Eiji (Gemini Pro)</h1>
             <p id="status-text" class="text-xs text-gray-400">Connected to Neural Net</p>
         </div>
     </div>
 
     <div id="chat-box" class="flex-1 p-4 flex flex-col gap-3">
         <div class="p-3 rounded-xl max-w-[85%] msg-ai shadow-md text-sm">
-            Systems online. I am Eiji, powered by the Gemini AI model. Ask me anything!
+            Systems online. I am Eiji, powered by the Gemini Pro model. Ask me anything!
         </div>
     </div>
 
@@ -120,9 +121,8 @@
         statusText.className = "text-xs text-blue-400 animate-pulse";
 
         try {
-            // 2. Fetch from Gemini API
-            // FIXED: Using standard 'gemini-1.5-flash'
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+            // 2. Fetch from Gemini API (Using the stable 'gemini-pro' model)
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${API_KEY}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
@@ -149,6 +149,7 @@
 
         } catch (error) {
             addMessage("Connection Error: " + error.message, 'ai');
+            console.error(error);
         } finally {
             userInput.disabled = false;
             sendBtn.disabled = false;
@@ -166,8 +167,8 @@
         if(sender === 'ai') {
             try {
                 div.innerHTML = marked.parse(text);
-            } catch(e) {
-                div.innerText = text; // Fallback if marked.js fails
+            } catch(err) {
+                div.innerText = text;
             }
         } else {
             div.innerText = text;
@@ -183,7 +184,7 @@
         window.speechSynthesis.cancel();
 
         // Strip markdown symbols for speech (*, #, etc)
-        const cleanText = text.replace(/[*#`]/g, '');
+        const cleanText = text.replace(/[*#`_]/g, '');
 
         const utterance = new SpeechSynthesisUtterance(cleanText);
         utterance.pitch = 1;
