--- a/projects/eiji-ai.html
+++ b/projects/eiji-ai.html
@@ -59,10 +59,10 @@
                     <a href="matrix-ops.html">Matrix Ops</a>
                     <a href="anime-quiz.html">Anime Quiz</a>
                     <a href="mlbb-quiz.html">MLBB Quiz</a>
-                    <a href="snake-game.html">Snake Game</a>
+                    <a href="snake-game.html">Cyber Viper</a>
                     <a href="flappy-bird.html">Neon Flap</a>
                     <a href="tic-tac-toe.html">Minimax AI</a>
-                    <a href="2048.html">2048 Puzzle</a>
+                    <a href="2048.html">Neon 2048</a>
                     <a href="rpg-game.html">RPG Engine</a>
                     <a href="fishing-game.html">Neon Angler</a>
                     <a href="claw-machine.html">Toy Kingdom</a>
@@ -75,7 +75,7 @@
     <div class="container" style="display: block; max-width: 1200px;">
         <div style="text-align: center; margin-bottom: 40px;">
             <h1 style="font-size: 3rem; font-weight: 800; background: linear-gradient(to right, #3b82f6, #9333ea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Eiji Assistant</h1>
-            <p style="color: #6b7280; font-size: 1.1rem; margin-top: 10px;">A conversational interface powered by Google's Gemini API and the browser's native <strong>Text-to-Speech API</strong>.</p>
+            <p style="color: #6b7280; font-size: 1.1rem; margin-top: 10px;">A sleek, conversational interface powered directly by Google's Gemini API, parsing markdown data in real-time.</p>
         </div>
 
         <div class="split-container">
@@ -112,7 +112,7 @@
             </div>
 
             <div class="output-view">
-                <iframe src="eiji-ai-app.html?v=2"></iframe>
+                <iframe src="eiji-ai-app.html?v=3"></iframe>
             </div>
         </div>
     </div>
