--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -90,7 +90,7 @@
         const text = userInput.value.trim();
         if (!text) return;
         
-        if (API_KEY === "AIzaSyDe9s0_R4BVOaIOEddkbACh_MRE01OO5Tg" || API_KEY.length < 10) {
+        if (API_KEY === "PASTE_YOUR_API_KEY_HERE" || API_KEY.length < 10) {
             addMessage("⚠️ Error: Please insert your API Key in the code.", 'ai');
             return;
         }
