--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -1,178 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eiji - Real AI</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Eiji - Real AI</title>
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
-  <style>
-    body { background-color: #0f172a; font-family: 'Roboto Mono', monospace; }
-
-    #chat-box {
-      height: 400px;
-      overflow-y: auto;
-      scroll-behavior: smooth;
-    }
-
-    ::-webkit-scrollbar { width: 6px; }
-    ::-webkit-scrollbar-thumb { background: #3b82f6; border-radius: 4px; }
-    ::-webkit-scrollbar-track { background: #1e293b; }
-
-    .msg-user { background: #1e293b; color: #e2e8f0; align-self: flex-end; border-bottom-right-radius: 2px; }
-    .msg-ai { background: #2563eb; color: white; align-self: flex-start; border-bottom-left-radius: 2px; }
-
-    .msg-ai p { margin-bottom: 0.5rem; }
-    .msg-ai code { background: rgba(0,0,0,0.2); padding: 2px 4px; border-radius: 4px; font-family: monospace; }
-    .msg-ai strong { font-weight: 700; color: #bfdbfe; }
-  </style>
+<style>
+body { background:#0f172a; font-family:monospace; }
+#chat-box { height:400px; overflow-y:auto; }
+.msg-user { background:#1e293b; color:#e2e8f0; align-self:flex-end; }
+.msg-ai { background:#2563eb; color:white; align-self:flex-start; }
+</style>
 </head>
 
 <body class="flex items-center justify-center h-screen p-4 text-white">
 
-<div class="w-full max-w-md bg-slate-900 border border-slate-700 rounded-2xl shadow-2xl overflow-hidden flex flex-col h-[650px]">
+<div class="w-full max-w-md bg-slate-900 rounded-xl flex flex-col h-[650px]">
 
-  <div class="bg-slate-800 p-4 border-b border-slate-700 flex items-center gap-4">
-    <div class="w-12 h-12 flex items-center justify-center bg-blue-900 rounded-full">
-      <span class="text-2xl">⚡</span>
-    </div>
-    <div>
-      <h1 class="font-bold text-lg text-blue-400">Eiji (Gemini Powered)</h1>
-      <p id="status-text" class="text-xs text-gray-400">Online & Ready</p>
-    </div>
-  </div>
+<div class="p-4 bg-slate-800">
+<h1 class="text-blue-400 font-bold">Eiji (Gemini Powered)</h1>
+<p id="status" class="text-xs text-gray-400">Online & Ready</p>
+</div>
 
-  <div id="chat-box" class="flex-1 p-4 flex flex-col gap-3">
-    <div class="p-3 rounded-xl max-w-[85%] msg-ai shadow-md text-sm">
-      Systems online. I am Eiji. Ask me anything!
-    </div>
-  </div>
+<div id="chat-box" class="flex-1 p-4 flex flex-col gap-3">
+<div class="p-3 rounded-xl max-w-[85%] msg-ai text-sm">
+Systems online. I am Eiji.
+</div>
+</div>
 
-  <div class="p-4 bg-slate-800 border-t border-slate-700">
-    <form onsubmit="sendMessage(event)" class="flex gap-2">
-      <input id="user-input" type="text" placeholder="Ask Eiji anything..."
-        class="flex-1 bg-slate-900 border border-slate-600 rounded-lg px-4 py-3 text-sm focus:outline-none focus:border-blue-500 text-white">
-      <button id="send-btn" type="submit"
-        class="bg-blue-600 hover:bg-blue-500 text-white px-4 rounded-lg font-bold">
-        ➤
-      </button>
-    </form>
-
-    <div class="flex justify-end items-center mt-2 px-1">
-      <button onclick="clearChat()" class="text-xs text-red-400 hover:text-red-300">
-        Clear Memory
-      </button>
-    </div>
-  </div>
+<div class="p-4 bg-slate-800">
+<form onsubmit="sendMessage(event)" class="flex gap-2">
+<input id="input" type="text"
+class="flex-1 bg-slate-900 border border-slate-600 rounded px-3 py-2 text-sm">
+<button class="bg-blue-600 px-4 rounded">➤</button>
+</form>
+</div>
 
 </div>
 
 <script>
-/* ===========================
-   🔑 PUT YOUR API KEY HERE
-=========================== */
-const API_KEY = "AIzaSyDe9s0_R4BVOaIOEddkbACh_MRE01OO5Tg";
-/* =========================== */
 
-const chatBox = document.getElementById('chat-box');
-const userInput = document.getElementById('user-input');
-const statusText = document.getElementById('status-text');
-const sendBtn = document.getElementById('send-btn');
+const API_KEY = "AIzaSyDe9s0_R4BVOaIOEddkbACh_MRE01OO5Tg";
+
+const chatBox = document.getElementById("chat-box");
+const input = document.getElementById("input");
+const statusText = document.getElementById("status");
 
 const SYSTEM_PROMPT = `
-You are Eiji, a witty and helpful AI assistant created by Jon Lewyn.
-Keep answers under 3 sentences unless asked.
-You have a slight cyberpunk tech personality.
+You are Eiji, a cyberpunk AI assistant.
+Keep replies short unless asked.
 `;
 
-async function sendMessage(e) {
-  e.preventDefault();
-  const text = userInput.value.trim();
-  if (!text) return;
+async function sendMessage(e){
+e.preventDefault();
+const text = input.value.trim();
+if(!text) return;
 
-  if (!API_KEY || API_KEY === "PASTE_YOUR_API_KEY_HERE") {
-    addMessage("⚠️ Please insert your Gemini API key.", "ai");
-    return;
-  }
+addMessage(text,"user");
+input.value="";
+statusText.innerText="Thinking...";
 
-  addMessage(text, "user");
-  userInput.value = "";
-  userInput.disabled = true;
-  sendBtn.disabled = true;
-  statusText.innerText = "Connecting...";
-  statusText.className = "text-xs text-blue-400 animate-pulse";
+try{
 
-  try {
+const response = await fetch(
+`https://generativelanguage.googleapis.com/v1/models/gemini-1.0-pro:generateContent?key=${API_KEY}`,
+{
+method:"POST",
+headers:{ "Content-Type":"application/json" },
+body: JSON.stringify({
+contents:[
+{
+parts:[
+{ text: SYSTEM_PROMPT + "\nUser: " + text }
+]
+}
+]
+})
+}
+);
 
-    const response = await fetch(
-      `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`,
-      {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          contents: [
-            {
-              role: "user",
-              parts: [
-                { text: SYSTEM_PROMPT + "\nUser: " + text }
-              ]
-            }
-          ]
-        })
-      }
-    );
+const data = await response.json();
 
-    const data = await response.json();
-
-    if (!response.ok) {
-      throw new Error(data.error?.message || "Request failed");
-    }
-
-    if (!data.candidates || !data.candidates.length) {
-      throw new Error("No response from model.");
-    }
-
-    const aiReply = data.candidates[0].content.parts[0].text;
-    addMessage(aiReply, "ai");
-
-  } catch (error) {
-    console.error(error);
-    addMessage("Connection Error: " + error.message, "ai");
-  }
-
-  userInput.disabled = false;
-  sendBtn.disabled = false;
-  statusText.innerText = "Online & Ready";
-  statusText.className = "text-xs text-gray-400";
-  userInput.focus();
+if(!response.ok){
+throw new Error(data.error?.message || "Request failed");
 }
 
-function addMessage(text, sender) {
-  const div = document.createElement("div");
-  div.className =
-    `p-3 rounded-xl max-w-[85%] shadow-md text-sm ${
-      sender === "user" ? "msg-user" : "msg-ai"
-    }`;
+const reply = data.candidates[0].content.parts[0].text;
 
-  if (sender === "ai") {
-    div.innerHTML = marked.parse(text);
-  } else {
-    div.innerText = text;
-  }
+addMessage(reply,"ai");
 
-  chatBox.appendChild(div);
-  chatBox.scrollTop = chatBox.scrollHeight;
+}catch(err){
+addMessage("Error: "+err.message,"ai");
 }
 
-function clearChat() {
-  chatBox.innerHTML = "";
-  addMessage("Memory wiped. Systems optimized.", "ai");
+statusText.innerText="Online & Ready";
 }
+
+function addMessage(text,type){
+const div=document.createElement("div");
+div.className=`p-3 rounded-xl max-w-[85%] text-sm ${
+type==="user"?"msg-user":"msg-ai"
+}`;
+div.innerHTML = marked.parse(text);
+chatBox.appendChild(div);
+chatBox.scrollTop=chatBox.scrollHeight;
+}
+
 </script>
 
 </body>
