--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -37,7 +37,7 @@
             <span class="text-2xl">⚡</span>
         </div>
         <div>
-            <h1 class="font-bold text-lg text-blue-400 tracking-wide">Eiji <span class="text-xs text-gray-500">(Llama 3)</span></h1>
+            <h1 class="font-bold text-lg text-blue-400 tracking-wide">Eiji <span class="text-xs text-gray-500">(Llama 3.3)</span></h1>
             <p id="status-text" class="text-xs text-emerald-400 font-bold">● Online & Connected</p>
         </div>
     </div>
@@ -107,7 +107,8 @@
                     "Authorization": "Bearer " + API_KEY.trim()
                 },
                 body: JSON.stringify({
-                    model: "llama3-8b-8192", // Fast & Free Meta Llama 3 model
+                    // THE FIX: Updated to Groq's currently active Llama 3.3 model!
+                    model: "llama-3.3-70b-versatile", 
                     messages: [
                         { role: "system", content: SYSTEM_PROMPT },
                         { role: "user", content: text }
