--- a/projects/eiji-ai.html
+++ b/projects/eiji-ai.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eiji AI - Project</title>
+    <title>D Dwarf Mini</title>
     <link rel="stylesheet" href="../style.css">
     <style>
         /* Shared split-view styles */
