--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -44,7 +44,7 @@
 
     <div id="chat-box" class="flex-1 p-4 flex flex-col gap-3">
         <div class="p-3 rounded-xl max-w-[85%] msg-ai shadow-md text-sm">
-            Groq LPU engines online. I am Eiji. How can I assist you today?
+             D Dwarf Mini engines online. I am Dwarf. How can I assist you today?
         </div>
     </div>
 
