--- a/projects/eiji-ai-app.html
+++ b/projects/eiji-ai-app.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>D Dwarf Mini</title>
+  <title>D Dwarf Mini - Groq Powered</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
@@ -37,20 +37,20 @@
             <span class="text-2xl">⚡</span>
         </div>
         <div>
-            <h1 class="font-bold text-lg text-blue-400 tracking-wide">Eiji <span class="text-xs text-gray-500">(Llama 3.3)</span></h1>
+            <h1 class="font-bold text-lg text-blue-400 tracking-wide">D Dwarf Mini <span class="text-xs text-gray-500">(Llama 3.3)</span></h1>
             <p id="status-text" class="text-xs text-emerald-400 font-bold">● Online & Connected</p>
         </div>
     </div>
 
     <div id="chat-box" class="flex-1 p-4 flex flex-col gap-3">
         <div class="p-3 rounded-xl max-w-[85%] msg-ai shadow-md text-sm">
-             D Dwarf Mini engines online. I am Dwarf. How can I assist you today?
+            Hello! I am D Dwarf Mini, a virtual assistant built by Jon Lewyn. How can I assist you today?
         </div>
     </div>
 
     <div class="p-4 bg-slate-800 border-t border-slate-700">
         <form onsubmit="sendMessage(event)" class="flex gap-2">
-            <input id="user-input" type="text" placeholder="Message Eiji..." autocomplete="off"
+            <input id="user-input" type="text" placeholder="Message D Dwarf Mini..." autocomplete="off"
                 class="flex-1 bg-slate-900 border border-slate-600 rounded-lg px-4 py-3 text-sm focus:outline-none focus:border-blue-500 text-white transition-colors">
             <button id="send-btn" type="submit" class="bg-blue-600 hover:bg-blue-500 text-white px-5 rounded-lg transition-all font-bold shadow-md hover:shadow-blue-500/50">
                 ➤
@@ -77,8 +77,8 @@
     const statusText = document.getElementById('status-text');
     const sendBtn = document.getElementById('send-btn');
 
-    // System instruction to define Eiji's personality
-    const SYSTEM_PROMPT = "You are Eiji, a witty and helpful AI assistant created by Jon Lewyn. Keep your answers concise (under 3 sentences) unless asked for details.";
+    // AI Brain updated here!
+    const SYSTEM_PROMPT = "You are D Dwarf Mini, a witty and helpful AI assistant created by Jon Lewyn. Keep your answers concise (under 3 sentences) unless asked for details.";
 
     async function sendMessage(e) {
         e.preventDefault();
@@ -90,7 +90,6 @@
             return;
         }
 
-        // Add User Message
         addMessage(text, 'user');
         userInput.value = '';
         userInput.disabled = true;
@@ -99,7 +98,6 @@
         statusText.className = "text-xs text-blue-400 animate-pulse font-bold";
 
         try {
-            // Groq API Endpoint
             const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
                 method: "POST",
                 headers: { 
@@ -107,7 +105,6 @@
                     "Authorization": "Bearer " + API_KEY.trim()
                 },
                 body: JSON.stringify({
-                    // THE FIX: Updated to Groq's currently active Llama 3.3 model!
                     model: "llama-3.3-70b-versatile", 
                     messages: [
                         { role: "system", content: SYSTEM_PROMPT },
@@ -121,7 +118,6 @@
             
             if (data.error) throw new Error(data.error.message);
             
-            // Extract text from Groq's response format
             if (data.choices && data.choices.length > 0) {
                 const aiReply = data.choices[0].message.content;
                 addMessage(aiReply, 'ai');
