--- a/projects/eiji-ai.html
+++ b/projects/eiji-ai.html
@@ -3,44 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D Dwarf Mini</title>
+    <title>D Dwarf Mini AI - Project</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-        /* Shared split-view styles */
         body { background-color: #ffffff; }
-        
-        .split-container {
-            display: flex; gap: 30px; height: 850px; 
-            margin-top: 30px; margin-bottom: 50px;
-        }
-
-        .code-view {
-            flex: 1; background: #1e1e1e; color: #d4d4d4; padding: 25px;
-            border-radius: 16px; overflow: auto; font-family: 'Consolas', monospace;
-            border: 1px solid #333; font-size: 0.9rem;
-        }
-
-        .output-view {
-            flex: 1; border-radius: 16px; overflow: hidden;
-            border: 1px solid #e5e7eb; background: #0f172a;
-            box-shadow: 0 20px 25px -5px rgba(0,0,0,0.5);
-            display: flex; justify-content: center; align-items: center;
-        }
-
+        .split-container { display: flex; gap: 30px; height: 850px; margin-top: 30px; margin-bottom: 50px; }
+        .code-view { flex: 1; background: #1e1e1e; color: #d4d4d4; padding: 25px; border-radius: 16px; overflow: auto; font-family: 'Consolas', monospace; border: 1px solid #333; font-size: 0.9rem; }
+        .output-view { flex: 1; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; background: #0f172a; box-shadow: 0 20px 25px -5px rgba(0,0,0,0.5); display: flex; justify-content: center; align-items: center; }
         iframe { width: 100%; height: 100%; border: none; }
-        
-        /* Syntax Highlighting */
-        .k { color: #569cd6; font-weight: bold; } /* Keywords */
-        .c { color: #6a9955; font-style: italic; } /* Comments */
-        .n { color: #b5cea8; } /* Numbers */
-        .f { color: #dcdcaa; } /* Functions */
-        .s { color: #ce9178; } /* Strings */
-
-        @media (max-width: 1000px) {
-            .split-container { flex-direction: column; height: auto; }
-            .code-view { height: 450px; }
-            .output-view { height: 800px; }
-        }
+        .k { color: #569cd6; font-weight: bold; } .c { color: #6a9955; font-style: italic; } .n { color: #b5cea8; } .f { color: #dcdcaa; } .s { color: #ce9178; }
+        @media (max-width: 1000px) { .split-container { flex-direction: column; height: auto; } .code-view { height: 450px; } .output-view { height: 800px; } }
     </style>
 </head>
 <body>
@@ -66,7 +38,7 @@
                     <a href="rpg-game.html">RPG Engine</a>
                     <a href="fishing-game.html">Neon Angler</a>
                     <a href="claw-machine.html">Toy Kingdom</a>
-                    <a href="eiji-ai.html">Eiji AI</a>
+                    <a href="eiji-ai.html">D Dwarf Mini AI</a>
                 </div>
             </div>
         </div>
@@ -74,7 +46,7 @@
 
     <div class="container" style="display: block; max-width: 1200px;">
         <div style="text-align: center; margin-bottom: 40px;">
-            <h1 style="font-size: 3rem; font-weight: 800; background: linear-gradient(to right, #3b82f6, #9333ea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Eiji Assistant</h1>
+            <h1 style="font-size: 3rem; font-weight: 800; background: linear-gradient(to right, #3b82f6, #9333ea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">D Dwarf Mini Assistant</h1>
             <p style="color: #6b7280; font-size: 1.1rem; margin-top: 10px;">A sleek, conversational interface powered by <strong>Groq LPUs</strong> and Meta's <strong>Llama 3.3</strong>, parsing markdown data in real-time.</p>
         </div>
 
@@ -109,7 +81,7 @@
             </div>
 
             <div class="output-view">
-                <iframe src="eiji-ai-app.html?v=5"></iframe>
+                <iframe src="eiji-ai-app.html?v=6"></iframe>
             </div>
         </div>
     </div>
