--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="projects/fishing-game.html">Neon Angler</a>
                     <a href="projects/claw-machine.html">Toy Kingdom Claw</a>
                     
-                    <a href="projects/eiji-ai.html">Eiji AI Assistant</a>
+                    <a href="projects/eiji-ai.html">D Dwarf Mini AI</a>
                 </div>
             </div>
         </div>
