--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 <a href="resume.html" class="btn-secondary" style="border-color: #4f46e5; color: #818cf8;">
                     <i class="fas fa-file-alt"></i> My Resume
                 </a>
+
+                <a href="rpg-resume.html" class="btn-primary" style="background: linear-gradient(to right, #10b981, #3b82f6); border: none; padding: 12px 24px; box-shadow: 0 4px 15px rgba(16, 185, 129, 0.4);">
+                    <i class="fas fa-gamepad"></i> My Life as RPG Game
+                </a>
             </div>
         </div>
     </header>
@@ -114,9 +118,9 @@
     <footer>
         <p>&copy; 2026 Unfiltered Portfolio. Built by Jon Lewyn Villaram Tanggaro.</p>
         <div class="social-links">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jon-lewyn-tanggaro" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/lewynski" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:lewynvllram@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
     </footer>
 
